SQL预览支持直接使用JSON参数